--- a/src/pages/after-splash/after-splash.html
+++ b/src/pages/after-splash/after-splash.html
@@ -33,7 +33,8 @@
     <!-- <button class="av-location" ion-button (click)="checkLocation()">
         Is Location Available?
         </button> -->
-    <ion-item *ngIf="currentaddress">
+    <ion-item >
+
       <button ion-button color="secondary" block (click)="loginPage()">Continue <ion-icon name="arrow-forward" style="color:#ffffff; margin-left: 1rem;" ></ion-icon></button>
     </ion-item>
   
