--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -41,26 +41,26 @@
           </div>
       </div>
       
-      <h3 class="person-name"> John Doe </h3>
-      <p>  <ion-icon class="pin" name="pin"></ion-icon> New Delhi</p>
+      <h3 class="person-name"> {{userName}} </h3>
+      <p>  <ion-icon class="pin" name="pin"></ion-icon> {{userAddress}}</p>
   </ion-item>
     
       <ion-item class="pro-body">
           <ion-icon item-start name="person"></ion-icon>
         <p>Name</p>
-        <h3>Jon Dowe</h3>
+        <h3>{{userName}}</h3>
       </ion-item>
 
       <ion-item  class="pro-body">
           <ion-icon item-start name="mail"></ion-icon>
         <p>Email</p>
-        <h3>jon@gmail.com</h3>
+        <h3>{{userEmail}}</h3>
       </ion-item>
 
       <ion-item class="pro-body">
           <ion-icon item-start name="phone-portrait"></ion-icon>
         <p>Phone</p>
-        <h3>+91 999 - 999 - 9999</h3>
+        <h3>{{userPhone}}</h3>
       </ion-item>
 
 
