palash seller drder

--- a/src/pages/vieworder/vieworder.html
+++ b/src/pages/vieworder/vieworder.html
@@ -14,5 +14,35 @@
 
 
 <ion-content padding>
-
+  <ion-list >
+    <ion-card (click)="goTosellerOrderDetails(item.order.id)" *ngFor="let item of orderArray">
+      <ion-item>
+        <ion-row>
+          <ion-col col-4>
+            <h2 class="f-w-5">Order Id:</h2>
+          </ion-col>
+          <ion-col col-8>
+            <h2>#00{{item.order.id}}</h2>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col col-4>
+            <h2 class="f-w-5">Date:</h2>
+          </ion-col>
+          <ion-col col-8>
+            <h2>{{item.order.order_date|date:'MMM dd,yyyy'}}</h2>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col col-4>
+            <h2 class="f-w-5">Total:</h2>
+          </ion-col>
+          <ion-col col-8>
+            <p>${{item.order.total_price}}</p>
+          </ion-col>
+        </ion-row>
+        <button item-end ion-button class="detail-btn" > Detail </button>
+      </ion-item>
+    </ion-card>
+  </ion-list>
 </ion-content>
