--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -20,9 +20,9 @@
         <button ion-button icon-only >
           <ion-icon name="search"></ion-icon>
         </button>
-        <button ion-button icon-only >
+        <!-- <button ion-button icon-only >
           <ion-icon name="cart"></ion-icon>
-        </button>
+        </button> -->
       </ion-buttons>
     </ion-navbar>
 
@@ -45,6 +45,7 @@
             </ion-col>
             <ion-col col-3 text-center>
               <p>{{item.quantity}}</p>
+             
             </ion-col>
             <ion-col col-2 text-center>
               <ion-icon class="round-bg" name="remove" (click)="decrement(i)"></ion-icon>
