--- a/src/pages/forgot-password/forgot-password.html
+++ b/src/pages/forgot-password/forgot-password.html
@@ -14,7 +14,7 @@
 
 <ion-content padding>
   <div class="logo">
-    <img src="assets/imgs/after-splash-logo.png" alt="">
+    <img src="assets/imgs/appicon.png" alt="">
   </div>
 
   <form [formGroup]="forgetpassForm" (ngSubmit)="forgetpassword(forgetpassForm.value)">
