--- a/src/pages/vieworder/vieworder.html
+++ b/src/pages/vieworder/vieworder.html
@@ -6,9 +6,16 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>vieworder</ion-title>
-  </ion-navbar>
+      
+  <ion-toolbar>
+    <button ion-button icon-only menuToggle left>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>
+      <h3>Order Listing</h3>
+    </ion-title>
+  
+</ion-toolbar>  
 
 </ion-header>
 
