--- a/src/pages/order-list/order-list.html
+++ b/src/pages/order-list/order-list.html
@@ -21,8 +21,8 @@
       <button ion-button icon-only>
         <ion-icon name="search"></ion-icon>
       </button>
-      <button ion-button icon-only>
-        <ion-icon name="cart"></ion-icon>
+      <button ion-button icon-only (click)="goToCartPage()">
+        <ion-icon name="cart" ></ion-icon>
       </button>
     </ion-buttons>
   </ion-navbar>
@@ -30,7 +30,7 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
   <ion-list >
     <ion-card (click)="goToOrderDetails(item.id)" *ngFor="let item of orderArray">
       <ion-item>
