--- a/src/pages/search-result-details/search-result-details.html
+++ b/src/pages/search-result-details/search-result-details.html
@@ -68,6 +68,23 @@
               </p>
             </div>
           </ion-card>
+
+          <ion-card>
+            <div padding class="about-info">
+              <h2>Seller Information</h2>
+              <ion-item >
+                <h4>{{sellerArray['first_name']}} {{sellerArray['last_name']}}</h4>
+                </ion-item>
+
+                <ion-item >
+                  <h4>{{sellerArray['email']}}</h4>
+                  </ion-item>
+
+                  <ion-item >
+                    <h4>{{sellerArray['phone']}}</h4>
+                    </ion-item>
+                </div>
+          </ion-card>
   
           <!-- <div class="wishlist-area" padding>
             <ion-item>
@@ -102,14 +119,27 @@
           <ion-card style="background: none; box-shadow: none;">
             <ion-row>
               <ion-col col-6>
-                <button ion-button block class="add-to-cart" type="submit" (click)="addcart(item.id)" style="background-color:rgb(57, 214, 96)">AddToCart</button>
+                <button ion-button block class="add-to-cart" *ngIf="user_exist==1" type="submit" (click)="addcart(item.id)" style="background-color:rgb(57, 214, 96)">AddToCart</button>
               </ion-col>
               <ion-col col-6>
-                <button ion-button block class="add-to-cart" type="submit" color="dark" >Buy Now</button>
+                <button ion-button block class="add-to-cart" *ngIf="user_exist==1" type="submit" color="dark" (click)="buynow(item.id)">Buy Now</button>
               </ion-col>
             </ion-row>
             
           </ion-card>
+
+          <ion-card style="background: none; box-shadow: none;">
+            <ion-row>
+              <ion-col col-6>
+                <button ion-button block class="add-to-cart" *ngIf="user_exist==0" type="submit" (click)="cartAlert()" style="background-color:rgb(57, 214, 96)">AddToCart</button>
+              </ion-col>
+              <ion-col col-6>
+                <button ion-button block class="add-to-cart" *ngIf="user_exist==0" type="submit" (click)="buyAlert()" color="dark" >Buy Now</button>
+              </ion-col>
+            </ion-row>
+            
+          </ion-card>
+  
   
         </ion-list>
   
