--- a/src/pages/order-detail/order-detail.html
+++ b/src/pages/order-detail/order-detail.html
@@ -122,6 +122,7 @@
         
           <p>{{product.price}}.00</p>
           </ion-col>
+          <p>**Estimated Delivery time {{product.setcharge.shipping_day}} days</p>
       </ion-row>
   
       <ion-item>
