--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -63,6 +63,8 @@
           
           <div class="price"> ${{item.price}}.00 </div>
          </div>   
+
+         <span>* Estimated Delivery Time {{item.setcharge.shipping_day}} days</span>
       </ion-item>
   
       <!-- <ion-item>
