--- a/src/pages/order-list/order-list.html
+++ b/src/pages/order-list/order-list.html
@@ -32,7 +32,7 @@
 
 <ion-content>
   <ion-list >
-    <ion-card (click)="goToOrderDetails(item.id)" *ngFor="let item of orderArray">
+    <ion-card  *ngFor="let item of orderArray">
       <ion-item>
         <ion-row>
           <ion-col col-4>
@@ -59,8 +59,20 @@
           </ion-col>
         </ion-row>
   
-        <button item-end ion-button class="detail-btn" > Detail </button>
+        <button item-end ion-button class="detail-btn" (click)="goToOrderDetails(item.id)"> Detail </button>
+      
+        <button item-end ion-button class="detail-btn" (click)="review()"> Review </button>
+        <!-- <rating [(ngModel)]="rate"
+        readOnly="false" 
+        max="5" 
+        emptyStarIconName="star-outline" 
+        halfStarIconName="star-half" 
+        starIconName="star" 
+        nullable="false"
         
+        > 
+</rating> -->
+
       </ion-item>
     </ion-card>
 
