--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -55,12 +55,11 @@
 
 		
 			<ion-item class="no-brdr-btm fb-item" >
-				<button ion-button class="fb-btn" color="facebook" outline block> <img class="fb" src="assets/imgs/fb.png" alt=""> Connect With <span class="bold-text">Facebook</span> </button>
+				<button ion-button class="fb-btn" color="facebook" outline block> <img class="fb" src="assets/imgs/fb.png" alt=""> Connect With &nbsp; <span class="bold-text">Facebook</span> </button>
 			</ion-item>
 			<ion-item class="g-item">
-				<button ion-button class="fb-btn" color="google" outline block>
-					<img class="g-plus" src="assets/imgs/g-plus.png" alt=""> Connect With
-					<span class="bold-text">Google Plus</span>
+				<button ion-button class="gp-btn" color="google" outline block>
+					<img class="g-plus" src="assets/imgs/g-plus.png" alt=""> Connect With &nbsp; <span class="bold-text">Google Plus</span>
 				</button>
 			</ion-item>
 			<button ion-button full (click)="signupPage()" style="background-color:rgb(57, 214, 96)">Sign Up</button>
