--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -31,7 +31,7 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
     <ion-slides pager>
   
         <ion-slide>
@@ -88,11 +88,11 @@
       </ion-row>
       </div>
       
-      <div >
+      <div>
 
-          <ion-list class="drink-area"  >
+          <ion-list class="drink-area pd">
     
-              <ion-row  >
+              <ion-row class="mb-50">
                 <ion-col col-4 *ngFor="let item of productArray" (click)="goToProductDetails(item.id)">
 
                   <ion-card >
