--- a/src/pages/order-detail/order-detail.html
+++ b/src/pages/order-detail/order-detail.html
@@ -30,7 +30,7 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
   <ion-card padding *ngFor="let item of orderDetailsArray">
     <ion-row>
       <ion-col>
