--- a/src/pages/filter/filter.html
+++ b/src/pages/filter/filter.html
@@ -87,7 +87,7 @@
 			
 		
 	
-	<p class="list"><button ion-button round>SEARCH</button></p>
+	<p class="list"><button ion-button block>SEARCH</button></p>
 			</form> 
 	
 			
