--- a/src/pages/checkout/checkout.html
+++ b/src/pages/checkout/checkout.html
@@ -153,7 +153,7 @@
       
     </ion-card>
     
-    <ion-card>
+    <ion-card class="delivery-details-card">
         <ion-list>
             <h2>Delivery Details</h2>
             <form [formGroup]="billingForm" (ngSubmit)="submit(billingForm.value,shippingForm.value)">
