debashree 21th august eve

--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -16,14 +16,14 @@
         <h3>My Bag</h3>
       </ion-title>
   
-      <ion-buttons end>
+      <!-- <ion-buttons end>
         <button ion-button icon-only >
           <ion-icon name="search"></ion-icon>
-        </button>
+        </button> -->
         <!-- <button ion-button icon-only >
           <ion-icon name="cart"></ion-icon>
         </button> -->
-      </ion-buttons>
+      <!-- </ion-buttons> -->
     </ion-navbar>
 
 </ion-header>
