--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -22,7 +22,7 @@
 	
 			<h4>Log In</h4>
 			<ion-item>
-				<ion-label floating>Username</ion-label>
+				<ion-label floating>Email address</ion-label>
 				<ion-input type="text" formControlName="email"></ion-input>
 			</ion-item>
 			<!-- <p class="error" *ngIf="formGroup.get('email').hasError('required') && formGroup.get('email').touched" ion-text color="danger" >Please Enter Your Email Address </p> -->
