--- a/src/pages/signupone/signupone.html
+++ b/src/pages/signupone/signupone.html
@@ -139,7 +139,7 @@
 			<div class="gender-area mt-5">
 				<h5>Date Of Birth</h5>
 				<ion-row  >
-					<input formControlName="dob" type="date" class="date-input">
+					<input formControlName="dob" type="date" min="1990-12-31" max="2008-12-31" class="date-input">
 					<!-- <ion-input formControlName="dob" type="date"></ion-input> -->
 				</ion-row>
 			</div>
