--- a/src/pages/final-checkout/final-checkout.html
+++ b/src/pages/final-checkout/final-checkout.html
@@ -69,7 +69,7 @@
               <!-- <span>Black Label</span> -->
             </div>
              <div item-end text-right>
-              <ion-icon name="more"></ion-icon>
+              <!-- <ion-icon name="more"></ion-icon> -->
               <div class="price"> ${{item.price}}.00 </div>
               
              </div>   
