--- a/src/pages/buyer-profile/buyer-profile.html
+++ b/src/pages/buyer-profile/buyer-profile.html
@@ -35,7 +35,7 @@
 
   <ion-item text-center style="box-shadow: 0px 1px 10px 0px #8a8b8b; padding-bottom: 32px;" >
       <div class="po-rel" padding>
-        <a (click)="editBuyerProfile()"><ion-icon class="edit" name="create"></ion-icon></a>
+        <a (click)="editProfilePic()"><ion-icon class="edit" name="create"></ion-icon></a>
           <div class="pro-pic-area">
             <img src="assets/imgs/avtar.png" alt="">
           </div>
@@ -63,7 +63,9 @@
         <h3>{{userPhone}}</h3>
       </ion-item>
 
-
+      <button class="btn-edit" ion-button color="secondary" block (click)="editBuyerProfile()">Edit Profile
+        
+      </button>
 
 
         </ion-list>
