--- a/src/pages/payment-successful/payment-successful.html
+++ b/src/pages/payment-successful/payment-successful.html
@@ -7,11 +7,11 @@
 <ion-header>
 
     <ion-navbar>
-      <ion-buttons left>
+      <!-- <ion-buttons left>
         <button ion-button icon-only menuToggle>
           <ion-icon name="arrow-back"></ion-icon>
         </button>
-      </ion-buttons>
+      </ion-buttons> -->
   
       <ion-title>
         <h3>Payment Success</h3>
@@ -28,9 +28,9 @@
         <ion-item text-center>
           <ion-icon class="ion-checkmark-circle" name="checkmark-circle"></ion-icon>
           <h1>Payment Successful</h1>
-          <p>Paid : $120.00</p>
-          
+          <!-- <p>Paid : $120.00</p> -->
+                   
         </ion-item>
     </ion-card>
-
+    <button ion-button block text-uppercase  color="secondary" (click)="goToHomePage()">Go Home</button>
 </ion-content>
