--- a/src/pages/add-product/add-product.html
+++ b/src/pages/add-product/add-product.html
@@ -105,6 +105,12 @@
                     <img src="{{pathForImage(lastImage)}}"/>
                    </ion-thumbnail>
                   </div>
+
+                  <div *ngIf="pathForImage(lastImage)== ''">
+                    <ion-thumbnail>
+                    <img src="assets/imgs/camera.png"/>
+                   </ion-thumbnail>
+                  </div>
                   
               
   
